ADD Point files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(L3_miage_monopoly)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(L3_miage_monopoly main.cpp)
+add_executable(L3_miage_monopoly main.cpp point.cpp point.h)
